--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -90,6 +90,8 @@ env:
 jobs:
   generate-bridge-linux:
     uses: ./.github/workflows/bridge.yml
+    with:
+      version: ${{ fromJson(inputs.extras).version }}
 
   build-rustdesk-android:
     needs: [generate-bridge-linux]
