--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -115,13 +115,13 @@ jobs:
           #     reltype: release,
           #     suffix: "",
           #   }
-          # - {
-          #     arch: x86_64,
-          #     target: x86_64-linux-android,
-          #     os: ubuntu-20.04,
-          #     reltype: release,
-          #     suffix: "",
-          #   }
+          - {
+              arch: x86_64,
+              target: x86_64-linux-android,
+              os: ubuntu-20.04,
+              reltype: release,
+              suffix: "",
+            }
     steps:
       - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@main
@@ -230,20 +230,20 @@ jobs:
 
       - name: Install vcpkg dependencies
         run: |
-          #case ${{ matrix.job.target }} in
-          #  aarch64-linux-android)
-          ANDROID_TARGET=arm64-v8a
-          #  ;;
+          case ${{ matrix.job.target }} in
+            aarch64-linux-android)
+            ANDROID_TARGET=arm64-v8a
+            ;;
           #   armv7-linux-androideabi)
           #     ANDROID_TARGET=armeabi-v7a
           #   ;;
-          #   x86_64-linux-android)
-          #     ANDROID_TARGET=x86_64
-          #   ;;
+            x86_64-linux-android)
+              ANDROID_TARGET=x86_64
+            ;;
           #   i686-linux-android)
           #     ANDROID_TARGET=x86
           #   ;;
-          # esac
+          esac
           if ! ./flutter/build_android_deps.sh "${ANDROID_TARGET}"; then
             find "${VCPKG_ROOT}/" -name "*.log" | while read -r _1; do
               echo "$_1:"
@@ -363,6 +363,8 @@ jobs:
           sed -i 's|"RustDesk"|"${{ inputs.appname }}"|' ./flutter/android/app/src/main/kotlin/com/carriez/flutter_hbb/MainService.kt
           sed -i 's|"RustDesk Service|"${{ inputs.appname }} Service|' ./flutter/android/app/src/main/kotlin/com/carriez/flutter_hbb/MainService.kt
           sed -i 's|RustDesk|${{ inputs.appname }}|' ./flutter/lib/main.dart
+          sed -i 's|"RustDesk"|"${{ inputs.appname }}|' ./flutter/lib/desktop/widgets/tabbar_widget.dart
+          sed -i 's|"RustDesk"|"${{ inputs.appname }}|' ./libs/hbb_common/src/config.rs
 
       - name: fix connection delay
         continue-on-error: true
@@ -394,22 +396,22 @@ jobs:
         run: |
           rustup target add ${{ matrix.job.target }}
           cargo install cargo-ndk --version ${{ env.CARGO_NDK_VERSION }}
-          # case ${{ matrix.job.target }} in
-          #   aarch64-linux-android)
-          ./flutter/ndk_arm64.sh
-          mkdir -p ./flutter/android/app/src/main/jniLibs/arm64-v8a
-          cp ./target/${{ matrix.job.target }}/release/liblibrustdesk.so ./flutter/android/app/src/main/jniLibs/arm64-v8a/librustdesk.so
-          #   ;;
+          case ${{ matrix.job.target }} in
+            aarch64-linux-android)
+            ./flutter/ndk_arm64.sh
+            mkdir -p ./flutter/android/app/src/main/jniLibs/arm64-v8a
+            cp ./target/${{ matrix.job.target }}/release/liblibrustdesk.so ./flutter/android/app/src/main/jniLibs/arm64-v8a/librustdesk.so
+            ;;
           #   armv7-linux-androideabi)
           #     ./flutter/ndk_arm.sh
           #     mkdir -p ./flutter/android/app/src/main/jniLibs/armeabi-v7a
           #     cp ./target/${{ matrix.job.target }}/release/liblibrustdesk.so ./flutter/android/app/src/main/jniLibs/armeabi-v7a/librustdesk.so
           #   ;;
-          #   x86_64-linux-android)
-          #     ./flutter/ndk_x64.sh
-          #     mkdir -p ./flutter/android/app/src/main/jniLibs/x86_64
-          #     cp ./target/${{ matrix.job.target }}/release/liblibrustdesk.so ./flutter/android/app/src/main/jniLibs/x86_64/librustdesk.so
-          #   ;;
+            x86_64-linux-android)
+              ./flutter/ndk_x64.sh
+              mkdir -p ./flutter/android/app/src/main/jniLibs/x86_64
+              cp ./target/${{ matrix.job.target }}/release/liblibrustdesk.so ./flutter/android/app/src/main/jniLibs/x86_64/librustdesk.so
+            ;;
           #   i686-linux-android)
           #     ./flutter/ndk_x86.sh
           #     mkdir -p ./flutter/android/app/src/main/jniLibs/x86
@@ -439,21 +441,21 @@ jobs:
           export PATH=/usr/lib/jvm/java-11-openjdk-amd64/bin:$PATH
           # temporary use debug sign config
           sed -i "s/signingConfigs.release/signingConfigs.debug/g" ./flutter/android/app/build.gradle
-          #case ${{ matrix.job.target }} in
-          #  aarch64-linux-android)
-          mkdir -p ./flutter/android/app/src/main/jniLibs/arm64-v8a
-          cp ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/aarch64-linux-android/libc++_shared.so ./flutter/android/app/src/main/jniLibs/arm64-v8a/
-          cp ./target/${{ matrix.job.target }}/release/liblibrustdesk.so ./flutter/android/app/src/main/jniLibs/arm64-v8a/librustdesk.so
-          echo -n "${{ env.CUSTOM }}" | cat > ./flutter/assets/custom.txt
-          sed -i '/^    - assets\//a\    - assets/custom.txt' ./flutter/pubspec.yaml
-          if [[ "${{ inputs.iconlink }}" != "false" ]]; then
-            convert ./res/icon.png ./flutter/assets/icon.svg
-          fi
-          # build flutter
-          pushd flutter
-          flutter build apk "--${{ matrix.job.reltype }}" --target-platform android-arm64 --split-per-abi
-          mv build/app/outputs/flutter-apk/app-arm64-v8a-${{ matrix.job.reltype }}.apk ../rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.apk
-          #   ;;
+          case ${{ matrix.job.target }} in
+            aarch64-linux-android)
+            mkdir -p ./flutter/android/app/src/main/jniLibs/arm64-v8a
+            cp ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/aarch64-linux-android/libc++_shared.so ./flutter/android/app/src/main/jniLibs/arm64-v8a/
+            cp ./target/${{ matrix.job.target }}/release/liblibrustdesk.so ./flutter/android/app/src/main/jniLibs/arm64-v8a/librustdesk.so
+            echo -n "${{ env.CUSTOM }}" | cat > ./flutter/assets/custom.txt
+            sed -i '/^    - assets\//a\    - assets/custom.txt' ./flutter/pubspec.yaml
+            if [[ "${{ inputs.iconlink }}" != "false" ]]; then
+              convert ./res/icon.png ./flutter/assets/icon.svg
+            fi
+            # build flutter
+            pushd flutter
+            flutter build apk "--${{ matrix.job.reltype }}" --target-platform android-arm64 --split-per-abi
+            mv build/app/outputs/flutter-apk/app-arm64-v8a-${{ matrix.job.reltype }}.apk ../rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.apk
+            ;;
           #   armv7-linux-androideabi)
           #     mkdir -p ./flutter/android/app/src/main/jniLibs/armeabi-v7a
           #     cp ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/arm-linux-androideabi/libc++_shared.so ./flutter/android/app/src/main/jniLibs/armeabi-v7a/
@@ -464,16 +466,20 @@ jobs:
           #     flutter build apk "--${{ matrix.job.reltype }}" --target-platform android-arm --split-per-abi
           #     mv build/app/outputs/flutter-apk/app-armeabi-v7a-${{ matrix.job.reltype }}.apk ../rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.apk
           #   ;;
-          #   x86_64-linux-android)
-          #     mkdir -p ./flutter/android/app/src/main/jniLibs/x86_64
-          #     cp ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/x86_64-linux-android/libc++_shared.so ./flutter/android/app/src/main/jniLibs/x86_64/
-          #     cp ./target/${{ matrix.job.target }}/release/liblibrustdesk.so ./flutter/android/app/src/main/jniLibs/x86_64/librustdesk.so
-          #     echo -n "${{ env.CUSTOM }}" | cat > ./flutter/android/app/src/main/custom.txt
-          #     # build flutter
-          #     pushd flutter
-          #     flutter build apk "--${{ matrix.job.reltype }}" --target-platform android-x64 --split-per-abi
-          #     mv build/app/outputs/flutter-apk/app-x86_64-${{ matrix.job.reltype }}.apk ../rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.apk
-          #   ;;
+            x86_64-linux-android)
+              mkdir -p ./flutter/android/app/src/main/jniLibs/x86_64
+              cp ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/x86_64-linux-android/libc++_shared.so ./flutter/android/app/src/main/jniLibs/x86_64/
+              cp ./target/${{ matrix.job.target }}/release/liblibrustdesk.so ./flutter/android/app/src/main/jniLibs/x86_64/librustdesk.so
+              echo -n "${{ env.CUSTOM }}" | cat > ./flutter/assets/custom.txt
+              sed -i '/^    - assets\//a\    - assets/custom.txt' ./flutter/pubspec.yaml
+              if [[ "${{ inputs.iconlink }}" != "false" ]]; then
+                convert ./res/icon.png ./flutter/assets/icon.svg
+              fi
+              # build flutter
+              pushd flutter
+              flutter build apk "--${{ matrix.job.reltype }}" --target-platform android-x64 --split-per-abi
+              mv build/app/outputs/flutter-apk/app-x86_64-${{ matrix.job.reltype }}.apk ../rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.apk
+            ;;
           #   i686-linux-android)
           #     mkdir -p ./flutter/android/app/src/main/jniLibs/x86
           #     cp ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/i686-linux-android/libc++_shared.so ./flutter/android/app/src/main/jniLibs/x86/
@@ -484,10 +490,10 @@ jobs:
           #     flutter build apk "--${{ matrix.job.reltype }}" --target-platform android-x86 --split-per-abi
           #     mv build/app/outputs/flutter-apk/app-x86-${{ matrix.job.reltype }}.apk ../rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.apk
           #   ;;
-          # esac
+          esac
           popd
           mkdir -p signed-apk; pushd signed-apk
-          mv ../rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.apk ./${{ inputs.filename }}.apk
+          mv ../rustdesk-${{ env.VERSION }}-${{ matrix.job.arch }}${{ matrix.job.suffix }}.apk ./${{ inputs.filename }}-${{ matrix.job.arch }}.apk
           popd
 
       - name: Report Status
