--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -30,10 +30,17 @@ jobs:
             }
     steps:
       - name: Checkout source code
+        if: ${{ inputs.version != 'master' }}
         uses: actions/checkout@v4
         with:
           repository: rustdesk/rustdesk
           ref: refs/tags/${{ inputs.version }}
+        
+      - name: Checkout source code
+        if: ${{ inputs.version == 'master' }}
+        uses: actions/checkout@v4
+        with:
+          repository: rustdesk/rustdesk
 
       - name: Install prerequisites
         run: |
