--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -569,6 +569,7 @@ jobs:
           ftp -n ${{ secrets.GEN_FTP_SERVER }} << EOF
           user ${{ secrets.GEN_FTP_USER }} ${{ secrets.GEN_FTP_PASSWORD }}
           binary
+          mkdir /root/rdgen/exe/${{ env.UUIDFOLDER }}
           cd /root/rdgen/exe/${{ env.UUIDFOLDER }}/
           put ./signed-apk/${{ inputs.filename }}-${{ matrix.job.arch }}.apk
           quit
