--- a/.github/workflows/generator-android.yml
+++ b/.github/workflows/generator-android.yml
@@ -357,6 +357,7 @@ jobs:
           sed -i '/android: true/a \ \ adaptive_icon_background: "#ffffff"' ./flutter/pubspec.yaml
           sed -i '/adaptive_icon_background/a \ \ adaptive_icon_foreground: "../res/icon.png"' ./flutter/pubspec.yaml
           sed -i '/adaptive_icon_foreground:/a \ \ adaptive_icon_foreground_inset: 32' ./flutter/pubspec.yaml
+          sed -i '/ic_launcher_background/d' ./flutter/android/app/src/main/res/values/colors.xml
 
       - name: fix connection delay
         continue-on-error: true
@@ -385,6 +386,7 @@ jobs:
           pushd ./flutter
           flutter pub run flutter_launcher_icons
           popd
+          sed -i '/ic_launcher_background/d' ./flutter/android/app/src/main/res/values/colors.xml
       ##########################################################
 
       - name: Build rustdesk lib
